<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:measureAllChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_tipo_pizza"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <Spinner
            android:id="@+id/sTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/tvTextoTotalPizzas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_tipo_masa"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <Spinner
            android:id="@+id/sMasas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/tvTextoTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_tamano"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <Spinner
            android:id="@+id/sTamanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/separador_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_cantidad"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <NumberPicker
            android:id="@+id/npCantidad"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fadingEdge="horizontal|vertical"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bAnadir"
                android:text="@string/anadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"/>

            <Button
                android:id="@+id/bGuardarCambios"
                android:text="@string/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/bDescartarCambios"
                android:text="@string/descartar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>