<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.cebancpizza.cliente.DatosCliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="0">

        <TextView
            android:id="@+id/tvDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/texto_dni"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/etDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvNombre"
            android:layout_alignStart="@+id/tvNombre"
            android:layout_below="@+id/tvNombre"
            android:hint="@string/hint_dni"
            android:maxLength="9"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/texto_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvNombre"
            android:layout_alignStart="@+id/tvNombre"
            android:layout_below="@+id/tvNombre"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0">
        </EditText>


        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etNombre"
            android:layout_below="@+id/etNombre"
            android:layout_marginTop="5dp"
            android:text="@string/texto_direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="5dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etNombre"
            android:layout_alignStart="@+id/etNombre"
            android:layout_below="@+id/tvDireccion"
            android:hint="@string/hint_direccion"
            android:inputType="text|textPostalAddress"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:editable="false" />

        <TextView
            android:id="@+id/tvNumTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etDireccion"
            android:layout_below="@+id/etDireccion"
            android:layout_marginTop="5dp"
            android:text="@string/texto_telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="5dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etDireccion"
            android:layout_below="@+id/tvNumTelefono"
            android:hint="@string/hint_telefono"
            android:inputType="phone"
            android:maxLength="9"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bBuscar"
                android:text="Buscar Cliente"
                android:onClick="buscarCliente"
                android:layout_above="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>


            <Button
                android:id="@+id/btnSiguiente"
                android:text="@string/siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bAceptar"
                android:text="Aceptar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bModificar"
                android:text="Modificar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>