<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.cebancpizza.cliente.NuevaBebida" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_tipo_bebida"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <Spinner
            android:id="@+id/sTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/tvTextoTotalPizzas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/texto_cantidad"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0"/>

        <NumberPicker
            android:id="@+id/npCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bAnadir"
                android:text="@string/anadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"/>

            <Button
                android:id="@+id/bGuardarCambios"
                android:text="@string/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/bDescartarCambios"
                android:text="@string/descartar"
                android:layout_alignTop="@+id/bAnadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:visibility="gone" />
            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aceptar"
            android:id="@+id/bAceptar"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onAceptarPressed" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Modificar"
                android:id="@+id/bModificar"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onModificarPressed" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>